--- a/css/haleakala.css
+++ b/css/haleakala.css
@@ -23,7 +23,7 @@ body {
     background-size: auto 160%;
     /* height: 100vh; */
     /* width: 100vw; */
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
