--- a/css/haleakala.css
+++ b/css/haleakala.css
@@ -6,10 +6,10 @@ body {
     font-size: 24px;
     color: #000;
     background: #ffffff;
-    /* text-shadow: 0px 0px 5px rgba(0,0,0,0.4); */
+    text-shadow: 0px 0px 5px rgba(0,0,0,0.4);
 }
 .crater-body {
-    background: rgb(84, 84, 84);
+    background: rgb(0, 0, 0);
 }
 .crater-body, .crater-body a {
     color: #fff;
@@ -34,7 +34,7 @@ body {
     bottom: 0;
     right: 0;
     z-index: -1;
-    opacity: 0.5;
+    opacity: 0.7;
 }
 #flower {
     background-image: url('../images/flower-white.svg');
